<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learnparadigmshift.vatsal.paradigmshift.other.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent"
            android:text="Vatsal" />
        <TextView
            android:id="@+id/urlC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:text="@string/webUrl" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:textSize="18sp"
            android:text="@string/description_of_app" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="19sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:text="App Developer Details" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorContact"
            android:text="@string/author" />
        <TextView
            android:id="@+id/phoneC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorContact"
            android:text="@string/author_mobile_no" />
        <TextView
            android:id="@+id/emailC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorContact"
            android:text="@string/author_email" />

    </LinearLayout>
</FrameLayout>
